objects/MedProSC__MedPro_Search_Input_Element__c.object
<CustomObject>
    <description>A custom object which facilitates the customization of which search fields appear on the &quot;Search MedPro&quot; page for a specific &quot;MedPro Customer&quot; configuration.</description>
    <fields>
        <fullName>MedProSC__Default_Value__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Help_Text_Available__c</fullName>
        <formula>IF( OR(ISBLANK(MedProSC__Help_Text__c), ISNULL(MedProSC__Help_Text__c) ), &quot;false&quot;, &quot;true&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help_Text_Available</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Help_Text__c</fullName>
        <label>Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Sets this search form element to active (show) or inactive (hide) on the Search Form</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__Is_Focus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Focus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__Is_Lightning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, use in Lightning version of tool as well.</description>
        <inlineHelpText>If checked, use in Lightning version of tool as well.</inlineHelpText>
        <label>Is Lightning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__MedPro_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The associated MedPro Customer for this Search Form element</inlineHelpText>
        <label>MedPro Customer</label>
        <referenceTo>MedProSC__MedProCustomer__c</referenceTo>
        <relationshipLabel>MedPro Search Form Elements</relationshipLabel>
        <relationshipName>MedPro_Search_Input_Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MedProSC__Med_Pro_Search_Field__c</fullName>
        <inlineHelpText>The name of the MedPro searchable field which will be displayed on the Search Form</inlineHelpText>
        <label>Med Pro Search Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>State Of License</fullName>
                </value>
                <value>
                    <fullName>Last Name</fullName>
                </value>
                <value>
                    <fullName>First Name</fullName>
                </value>
                <value>
                    <fullName>Middle Name</fullName>
                </value>
                <value>
                    <fullName>Professional Designation</fullName>
                </value>
                <value>
                    <fullName>State License Number</fullName>
                </value>
                <value>
                    <fullName>NPI Number</fullName>
                </value>
                <value>
                    <fullName>Addr Line 1</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Zip Code</fullName>
                </value>
                <value>
                    <fullName>Country Code</fullName>
                </value>
                <value>
                    <fullName>DEA Number</fullName>
                </value>
                <value>
                    <fullName>CDS Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MedProSC__Ordinal_Position__c</fullName>
        <inlineHelpText>Numeric value allows this element to be reordered relative to other elements</inlineHelpText>
        <label>Ordinal Position</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MedProSC__Override_Display_Label__c</fullName>
        <label>Override Display Label</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Required_Flag_String__c</fullName>
        <formula>IF(MedProSC__Required__c, &quot;requiredInput&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Required Flag String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__SyncReOrderFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SyncReOrderFlag</label>
        <type>Checkbox</type>
    </fields>
    <label>MedPro Search Form Element</label>
    <nameField>
        <displayFormat>MP_SIE-{0000}</displayFormat>
        <label>MedPro Search Input Element Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MedPro Search Form Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>